--- a/WSUI.Module/View/ContactDataView.xaml
+++ b/WSUI.Module/View/ContactDataView.xaml
@@ -41,11 +41,86 @@
                             </Style.Triggers>
             </Style>
 
+            <ControlTemplate x:Key="SimpleExpanderButtonTemp" 
+             TargetType="{x:Type ToggleButton}">
+                <Border x:Name="ExpanderButtonBorder"
+                    Background="{TemplateBinding Background}"
+                    BorderBrush="{TemplateBinding BorderBrush}"
+                    BorderThickness="{TemplateBinding BorderThickness}"
+                    Padding="{TemplateBinding Padding}"
+                    >
+                    <Grid>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="Auto"/>
+                            <ColumnDefinition Width="*"/>
+                        </Grid.ColumnDefinitions>
+                        <Rectangle Fill="Transparent"
+                       Grid.ColumnSpan="2"/>
+                        <Ellipse Name="Circle"
+                 Grid.Column="0"
+                 Stroke="DarkGray"
+                 Width="20"
+                 Height="20"
+                 HorizontalAlignment="Center"
+                 VerticalAlignment="Center"
+                 />
+                        <Path x:Name="Sign"
+              Grid.Column="0"
+              Data="M 0,5 H 10 M 5,0 V 10 Z"
+              Stroke="#FF666666"
+              Width="10"
+              Height="10"
+              StrokeThickness="2"
+              HorizontalAlignment="Center"
+              VerticalAlignment="Center"
+              RenderTransformOrigin="0.5,0.5"
+              >
+                            <Path.RenderTransform>
+                                <RotateTransform Angle="0"/>
+                            </Path.RenderTransform>
+                        </Path>
+                        <ContentPresenter x:Name="HeaderContent"
+                          Grid.Column="1"
+                          Margin="4,0,0,0"
+                          ContentSource="Content"/>
+                    </Grid>
+                </Border>
+                <ControlTemplate.Triggers>
+                    <!--Change the sign to minus when toggled-->
+                    <Trigger Property="IsChecked"
+                 Value="True">
+                        <Setter Property="Data" 
+               TargetName="Sign" Value="M 0,5 H 10 Z"/>
+                    </Trigger>
 
+                    <!-- MouseOver, Pressed behaviours-->
+                    <Trigger Property="IsMouseOver"
+                         Value="true">
+                        <Setter Property="Stroke"
+                            Value="#FF3C7FB1"
+                            TargetName="Circle"/>
+                        <Setter Property="Stroke"
+                            Value="#222"
+                            TargetName="Sign"/>
+                    </Trigger>
+                    <Trigger Property="IsPressed"
+                         Value="true">
+                        <Setter Property="Stroke"
+                            Value="#FF526C7B"
+                            TargetName="Circle"/>
+                        <Setter Property="StrokeThickness"
+                            Value="1.5"
+                            TargetName="Circle"/>
+                        <Setter Property="Stroke"
+                            Value="#FF003366"
+                            TargetName="Sign"/>
+                    </Trigger>
+                </ControlTemplate.Triggers>
+            </ControlTemplate>
 
         </ResourceDictionary>
     </Controls:MetroContentControl.Resources>
-    <Grid IsEnabled="{Binding Path=Enabled,UpdateSourceTrigger=PropertyChanged}">
+    <Grid IsEnabled="{Binding Path=Enabled,UpdateSourceTrigger=PropertyChanged}" Focusable="False">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="0.60*"/>
             <ColumnDefinition Width="0.40*"/>
@@ -53,6 +128,7 @@
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
+            <RowDefinition Height="0.25*"/>
             <RowDefinition Height="0.25*"/>
             <RowDefinition Height="0.25*"/>
         </Grid.RowDefinitions>
@@ -77,16 +153,19 @@
                        Foreground="Blue"/>
         </StackPanel>
 
-        <StackPanel Orientation="Vertical" Grid.Row="2" Grid.RowSpan="2" Grid.Column="0" Grid.ColumnSpan="2">
-            <TextBlock Text="Contact's emails: " Margin="4" FontStyle="Italic" FontWeight="Bold" FontSize="14"></TextBlock>
-            <ListBox ItemsSource="{Binding DataSource,UpdateSourceTrigger=PropertyChanged}"
-                      ItemTemplateSelector="{StaticResource templateSelector}"
-                      SelectedItem="{Binding Path=Current,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}"
-                      >
+        <Expander Header="Details" Grid.Row="2" Grid.RowSpan="2" Grid.Column="0" Grid.ColumnSpan="2">
+            <StackPanel Orientation="Vertical" >
+                <TextBlock Text="Contact's emails: " Margin="4" FontStyle="Italic" FontWeight="Bold" FontSize="14"></TextBlock>
+                <ListBox ItemsSource="{Binding DataSource,UpdateSourceTrigger=PropertyChanged}"
+                          ItemTemplateSelector="{StaticResource templateSelector}"
+                          SelectedItem="{Binding Path=Current,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}"
+                          >
 
 
-            </ListBox>
-        </StackPanel>
-        
+                </ListBox>
+            </StackPanel>
+        </Expander>
+
+
     </Grid>
 </Controls:MetroContentControl>
