--- a/WSUI.Module/View/EmailDataView.xaml
+++ b/WSUI.Module/View/EmailDataView.xaml
@@ -5,11 +5,14 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
              xmlns:service="clr-namespace:WSUI.Module.Service"
+             xmlns:ctrl="clr-namespace:WSUI.Infrastructure.Controls;assembly=WSUI.Infrastructure"
+             x:Name="this"
              >
     <Controls:MetroContentControl.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="..\Service\ResourceTemplate.xaml" />
+                <!--<ResourceDictionary Source="..\Themes\Generic.xaml" />-->
             </ResourceDictionary.MergedDictionaries>
 
         </ResourceDictionary>
@@ -28,13 +31,17 @@
                     <DockPanel LastChildFill="True">
                         <Image Grid.Column="0" Source="..\Images\mail.png" Style="{StaticResource ImageStyle}" DockPanel.Dock="Left"/>
                         <StackPanel Orientation="Horizontal" DockPanel.Dock="Left">
-                            <TextBlock Text="{Binding Recepient}" FontWeight="Bold" Margin="5 3 5 3"/>
+                            <!--<TextBlock Text="{Binding Recepient}" FontWeight="Bold" Margin="5 3 5 3"/>-->
+                            <ctrl:HightliteTextBlock Text="{Binding Path=Recepient}" Hightlight="{Binding Path=DataContext.SearchString,ElementName=this}"  FontWeightLabel="Bold"
+                                                       Margin="5 3 5 3"/>
                             <TextBlock Text="(" Margin="0 3 0 3"/>
                             <TextBlock Text="{Binding Count}" FontWeight="Bold" Foreground="Red" Margin="0 3 0 3"></TextBlock>
                             <TextBlock Text=")" Margin="0 3 0 3"/>
                         </StackPanel>
                         <TextBlock Text="{Binding Path=Date,Converter={StaticResource dateConverter}}" Grid.Column="2" Margin="5" DockPanel.Dock="Right"/>
-                        <TextBlock Text="{Binding Path=Name}" Grid.Column="1" Margin="5"/>
+                        <!--<TextBlock Text="{Binding Path=Name}" Grid.Column="1" Margin="5"/>-->
+                        <ctrl:HightliteTextBlock Text="{Binding Path=Name}" Hightlight="{Binding Path=DataContext.SearchString,ElementName=this}"  
+                                                       Margin="5"/>
                     </DockPanel>
                 </DataTemplate>
             </ListBox.ItemTemplate>
