--- a/WSUI/MainWindow.xaml
+++ b/WSUI/MainWindow.xaml
@@ -43,19 +43,19 @@
             </Grid.ColumnDefinitions>
             <ContentControl Grid.Row="0" Grid.ColumnSpan="4" Margin="4"
                             cal:RegionManager.RegionName="SearchRegion"/>
-            <ContentControl Grid.Row="1" Grid.Column="0" Margin="4"
-                            cal:RegionManager.RegionName="StrategyRegion"/>
-            <ContentControl Grid.Row="1" Grid.Column="1" Margin="4"
+            <ContentControl Grid.Row="1" Grid.Column="0" Margin="4 4 0 4"
+                            cal:RegionManager.RegionName="StrategyRegion" HorizontalAlignment="Right"/>
+            <ContentControl Grid.Row="1" Grid.Column="1" Margin="0 4 4 4"
                             cal:RegionManager.RegionName="DataRegion"/>
             <ContentControl Grid.Row="1" Grid.Column="3" Margin="4"
                             cal:RegionManager.RegionName="PreviewRegion"/>
-            <!--<GridSplitter Grid.Row="1"
+            <GridSplitter Grid.Row="1"
                           Grid.Column="2"
                           Width="2"
                           HorizontalAlignment="Stretch"
                           Background="LightBlue"
-                          ResizeBehavior="BasedOnAlignment"
-                          ResizeDirection="Columns" />-->
+                          ResizeBehavior="PreviousAndNext"
+                          ResizeDirection="Columns" />
         
         </Grid>
     </AdornerDecorator>
