--- a/WSUI/MainWindow.xaml
+++ b/WSUI/MainWindow.xaml
@@ -45,15 +45,15 @@
                             cal:RegionManager.RegionName="SearchRegion"/>
             <ContentControl Grid.Row="1" Grid.Column="0" Margin="4 4 0 4"
                             cal:RegionManager.RegionName="StrategyRegion" HorizontalAlignment="Right"/>
-            <ContentControl Grid.Row="1" Grid.Column="1" Margin="0 4 4 4"
+            <ContentControl Grid.Row="1" Grid.Column="1" Margin="0 4 0 4"
                             cal:RegionManager.RegionName="DataRegion"/>
-            <ContentControl Grid.Row="1" Grid.Column="3" Margin="4"
+            <ContentControl Grid.Row="1" Grid.Column="3" Margin="0 4 4 4"
                             cal:RegionManager.RegionName="PreviewRegion"/>
             <GridSplitter Grid.Row="1"
                           Grid.Column="2"
                           Width="2"
                           HorizontalAlignment="Stretch"
-                          Background="LightBlue"
+                          Background="GhostWhite"
                           ResizeBehavior="PreviousAndNext"
                           ResizeDirection="Columns" />
         
