--- a/WSUI.Module/View/AllFilesSettingsView.xaml
+++ b/WSUI.Module/View/AllFilesSettingsView.xaml
@@ -4,7 +4,8 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
-             mc:Ignorable="d" 
+             xmlns:Service="clr-namespace:WSUI.Module.Service"
+                              mc:Ignorable="d" 
              >
     <Grid Margin="7" IsEnabled="{Binding Path=Enabled,UpdateSourceTrigger=PropertyChanged}" Focusable="False">
         <Grid.ColumnDefinitions>
@@ -25,7 +26,7 @@
                     <TextBox Text="{Binding Path=SearchString,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}"  
                         Controls:TextboxHelper.Watermark="Enter Search Criteria"
                         Controls:TextboxHelper.ClearTextButton="True"
-                         
+                        Service:KeyDownBehavior.KeyDown="{Binding KeyDownCommand}" 
                          Grid.Column="0"/>
                     <Button Command="{Binding Path=SearchCommand}" Content="Search" 
                         Grid.Column="1" HorizontalAlignment="Stretch" VerticalAlignment="Top"/>
